Fix scrolling issues in Chrome and general whitespace issues

--- a/css/style.scss
+++ b/css/style.scss
@@ -165,7 +165,7 @@ nav {
 
 .page {
     display: none;
-    padding-bottom: 100vh;
+    padding-bottom: 70px;
 }
 
 #page-content {
@@ -173,6 +173,7 @@ nav {
     flex-grow: 1;
     font-size: 1.3rem;
     margin-left: 240px;
+    padding-bottom: 30px;
     width: 100%;
     h2,
     h3,
